v1.2
+ Added Gfx_ScrollX() and Gfx_ScrollY()
+ Added Sys_GetConfig()
+ Added Sys_Path() and Sys_Type()
+ Added Print_Busy(), Print_Char(), Print_String()
+ Added Win_X() and Win_Y()
+ Added Mouse_Dragging()
+ Added support for menu icons
+ Added _msgpid()
@ Improved thread safety for system calls and various others
@ Fixed/updated Key_Multi() for SymbOS 4.0 [credit: Prodatron]
@ Fixed thread_quit() semaphore conflict that could cause freezes
@ Fixed Gfx_VLine() overwriting IY
@ Fixed vertical C_GRID controls
@ Fixed Menu_Context() return values
@ Simplified FRAME_XOR property
@ Changed Sys_Version() to _sysversion global (now used by crt0)
@ Various structs tweaked to better support SymbOS 4.0 features

v1.1
+ Added libgfx
+ Added gfx2sgx
+ Added gfxdemo.c sample
+ Added sound daemon support
+ Added snddemo.c sample
+ Added md2hlp.py and SymbOS .HLP documentation
+ Added sortmap tool for reading memory maps
+ Added compression system calls
+ Added C_GRID and C_TREE controls
+ Added Shell_CharWatch() system call
+ Added Sys_Version() system call
+ Added Win_Width() and Win_Height() utility functions
@ libz80 is now in the primary codebase
@ Redesigned float library around faster z80float/z88dk code
@ Fixed float casting
@ Fixed passing floats as variadic arguments
+ Added printf("%f") support
- Removed unnecessary float->float casts
@ Fixed register variables
@ Mem_ResizeX() is now the primary Mem_Resize()
@ Fixed typo in makecalc_native.bat
@ Fixed missing Win_ContentX/Y calls
@ fgetc(stdin)/getchar() now treat \n correctly
@ Fixed escaped hex codes being outputted backwards
@ Fixed bug that kept some network functions from working
@ Fixed bug with native cpp keeping track of seek
@ Replaced rand(), memmove() with faster versions
@ Reduced ld memory usage by removing unused segments
+ Now properly detects SymShell close and exits cleanly
+ Various documentation tweaks and additions

v1.0
+ Initial release