@@ -1,0 +1,3 @@
+#ifdef LINUXBUILD
+#define O_BINARY 0
+#endif
